<resources>

    <!-- Common strings -->
    <string name="save">Save</string>
    <string name="cancel">Cancel</string>
    <string name="app_name">FiTracker</string>

    <!-- Home Screen -->
    <string name="ah_profile">Profile</string>
    <string name="ah_exercises">Exercises</string>
    <string name="ah_log_workout">Log Workout</string>
    <string name="ah_workout_history">Workout History</string>
    <string name="ah_workout_progress">Progress</string>

    <!-- Exercises Messages -->
    <string name="new_exercise_category">Create Category</string>
    <string name="new_category_hint">Exercise Category Name</string>

    <!-- Save Exercises -->
    <string name="name_hint">Exercise Name</string>

    <!-- Workouts -->
    <string name="alw_log_exercise">Log Exercise</string>

    <!-- Error Messages -->
    <string name="init_error">There was a problem initializing the app... sorry.</string>

    <!-- Asset locations -->
    <string name="asset_exercises">exercises.json</string>

    <!-- Properties -->
    <string name="weight_label">Weight:</string>
    <string name="weight_hint">lbs</string>

    <string name="reps_label">Reps:</string>
    <string name="sets_label">Sets:</string>

    <string name="duration_label">Duration:</string>
    <string name="duration_hint_hours">hh</string>
    <string name="duration_hint_minutes">mm</string>
    <string name="duration_hint_seconds">ss</string>

    <string name="distance_label">Distance:</string>
    <string name="distance_hint">km</string>

    <string name="workout_label">Workout: </string>
</resources>
