<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="5dp">

    <LinearLayout
        android:id="@+id/dswe_weight"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/weight_label" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:gravity="center"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/weight_hint" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dswe_reps"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/reps_label"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:gravity="center"
            android:inputType="number"
            android:textSize="16sp"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dswe_sets"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/sets_label" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:gravity="center"
            android:inputType="number"
            android:textSize="16sp" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dswe_duration"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="3"
            android:textSize="16sp"
            android:text="@string/duration_label" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:lines="1"
            android:gravity="center"
            android:maxLength="2"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/duration_hint_hours"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:textSize="16sp"
            android:text=":" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:lines="1"
            android:gravity="center"
            android:maxLength="2"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/duration_hint_minutes"/>

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.15"
            android:textSize="16sp"
            android:text=":" />

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.9"
            android:lines="1"
            android:gravity="center"
            android:maxLength="2"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/duration_hint_seconds"/>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/dswe_distance"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="2">

        <TextView
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:textSize="16sp"
            android:text="@string/distance_label"/>

        <EditText
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:lines="1"
            android:gravity="center"
            android:inputType="number"
            android:textSize="16sp"
            android:hint="@string/distance_hint"/>

    </LinearLayout>

</LinearLayout>