<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginLeft="15dp"
    android:layout_marginRight="15dp"
    android:gravity="center_vertical"
    android:weightSum="10"
    android:background="@color/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/ah_profile"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="vertical"
            android:onClick="onClick">

            <TextView
                android:id="@+id/profile_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:text="@string/ah_profile"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_above="@+id/profile_text"
                android:layout_alignParentTop="true"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_profile"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ah_exercises"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="vertical"
            android:onClick="onClick">

            <TextView
                android:id="@+id/exercise_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:text="@string/ah_exercises"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/exercise_text"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_exercise"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/ah_workout"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="vertical"
            android:onClick="onClick">

            <TextView
                android:id="@+id/log_workout_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:text="@string/ah_log_workout"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/log_workout_text"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_log_workout"/>

        </RelativeLayout>

        <RelativeLayout
            android:id="@+id/ah_history"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="vertical"
            android:onClick="onClick">

            <TextView
                android:id="@+id/history_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:gravity="center"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:text="@string/ah_workout_history"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/history_text"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_workout_history"/>

        </RelativeLayout>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:orientation="horizontal"
        android:gravity="center">

        <RelativeLayout
            android:id="@+id/ah_progress"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:padding="20dp"
            android:orientation="vertical"
            android:onClick="onClick">

            <TextView
                android:id="@+id/progress_text"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentBottom="true"
                android:textColor="@android:color/secondary_text_light"
                android:textSize="16sp"
                android:gravity="center"
                android:text="@string/ah_workout_progress"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_above="@+id/progress_text"
                android:scaleType="fitCenter"
                android:src="@drawable/icon_progress"/>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>